# fast_alignment

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
cmake/: CodeCoverage.cmake  XcodeSettings.cmake
src/: Base.cpp  Base.h  CMakeLists.txt  Constants.h  DatabaseElement.cpp  DatabaseElement.h  Evalue.cpp  Evalue.h  RunQuery.cpp  Runnable.hpp  ScoreMatrix.hpp  Scorer.cpp  Scorer.h  Seg.cpp  Seg.h  SeqIndex.cpp  SeqIndex.h  ThreadPool.cpp  ThreadPool.hpp  alignment.cpp  alignment.hpp  client.cpp  main.cpp  opal.cpp  opal.h  runquery.cpp  server.cpp  tachyon.cpp  tachyon.h  util.cpp  util.h  writer.cpp  writer.hpp
src/LibWrappers/: Tachyon_lib.cpp
src/Tachyon/: Base.cpp  Base.h  DatabaseElement.cpp  DatabaseElement.h  Tachyon.cpp  Tachyon.h
src/Utils/: Ref.hpp  json.hpp  util.cpp  util.h
src/Utils/Bioinformatics/: Alignment.cpp  Alignment.hpp  Constants.cpp  Evalue.cpp  ScoreMatrix.cpp  ScoreMatrix.hpp  Writer.cpp  Writer.hpp  logArray.h  writer.cpp  writer.hpp
src/Utils/Bioinformatics/Alignment/: Opal.cpp  Opal.h
src/Utils/threadpool11/: CMakeLists.txt
src/Utils/threadpool11/include/threadpool11/: pool.hpp
src/Utils/threadpool11/src/: pool.cpp
src/util/: json.hpp
